:ok_hand: [maykinmedia/sharing-configs#8] process PR feedback
